Bug 135588 - Accessibility text in Confirm dialog in Document restore is not announced when using screenreaders
Summary: Accessibility text in Confirm dialog in Document restore is not announced whe...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.5.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:7.3.0
Keywords: accessibility
: 135770 (view as bug list)
Depends on:
Blocks: a11y-Windows
  Show dependency treegraph
 
Reported: 2020-08-09 20:08 UTC by Karl-Heinz Arkenau
Modified: 2023-03-16 11:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karl-Heinz Arkenau 2020-08-09 20:08:16 UTC
Description:
If you choose to dismiss restoring documents, the text within the Confirm dialog is not announced, only the buttons "Yes" or "No" are announced by the screenreader

Steps to Reproduce:
1. Crash LibreOffice
2. restart LibreOffice
3. Dissmiss restoring Documents
4. The confirm dialog opens and all you can here from screenreader is "Yes" or "No".

Actual Results:
Only the buttons (Yes or No) are announced by screenreader.

Expected Results:
The question, which this dialog asks should be announced.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Working with screenreader NVDA 2020.2
Comment 1 juergenkohler23 2020-09-03 07:22:27 UTC
I reproduced this bug with LibreOffice 7.0 and NVDA 2020.2 using Windows 10.
Comment 2 Matthias Doellert 2020-09-07 14:09:37 UTC
The bug could be reproduced.  Windows 10, Libre Office 7.0.0.3 (x64), NVDA 2020.2 and 2019.2.1
The descriptive text for the dialog box is not announced.
Comment 3 juergenkohler23 2020-09-10 07:18:00 UTC
Addition to my exact operating system information:

Windows
Edition	Windows 		10 Home
Version				1909
Operating system build		18363.1016

LibreOffice
Version:	7.0.0.3 (x64)
Build ID: 8061b3e9204bef6b321a21033174034a5e2ea88e
CPU-Threads: 	4; BS: Windows 10.0 Build 18363; UI-Render: Skia/Vulkan; VCL: win
Locale: 	de-DE (de_DE); UI: de-DE
Calc: 		threaded
Comment 4 Michael Weghorn 2021-09-01 15:50:45 UTC
Corresponding ticket in NVDA issue tracker: https://github.com/nvaccess/nvda/issues/11687

I have two pending changes for the LO side:

https://gerrit.libreoffice.org/c/core/+/121475
https://gerrit.libreoffice.org/c/core/+/121476

but *think* that the remaining part would probably best be handled on NVDA side, s. commit message in the second Gerrit change.

I'll discuss that with NVDA developers.
Comment 5 Michael Weghorn 2021-09-01 15:52:14 UTC
All message dialogs are affected by this, e.g. also the "Save Document?" dialog shown when modifying a document, then closing it without saving first.
Comment 6 Commit Notification 2021-09-01 21:58:55 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8887979092c88139e4b950d1a75fc576853a2e2c

tdf#135588 a11y: Consider text as a11y name

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2021-09-01 21:59:04 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e29f80efc826fdc8a8e4b7cbdd3becf2f074cce4

tdf#135588 wina11y: Map AccessibleRole::STATIC to ROLE_SYSTEM_STATICTEXT

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Michael Weghorn 2021-09-02 11:48:47 UTC
(In reply to Michael Weghorn from comment #4)
> I'll discuss that with NVDA developers.

I have submitted a pull request on GitHub [1] and added a comment in the NVDA GitHub issue [2] and am waiting for a response from the NVDA developers now.


[1] https://github.com/nvaccess/nvda/pull/12801
[2] https://github.com/nvaccess/nvda/issues/11687#issuecomment-911575308
Comment 9 Michael Weghorn 2021-09-14 06:53:41 UTC
(In reply to Michael Weghorn from comment #8)
> I have submitted a pull request on GitHub [1] and added a comment in the
> NVDA GitHub issue [2] and am waiting for a response from the NVDA developers
> now.
> 
> 
> [1] https://github.com/nvaccess/nvda/pull/12801
> [2] https://github.com/nvaccess/nvda/issues/11687#issuecomment-911575308

That pull request has been merged now, so this is fixed with the latest development versions of LibreOffice and NVDA.
Comment 10 Michael Weghorn 2023-03-16 11:30:33 UTC
*** Bug 135770 has been marked as a duplicate of this bug. ***