tdf#135588 a11y: Consider text as a11y name

If no accessible name could be retrieved from
a corresponding label or using the quick help text,
take the actual text of the window into account
for MULTILINEEDIT, etc.

This e.g. uses the texts in message dialogs
for the two VCLMultiLineEdits holding the primary
and secondary message in a MessageDialog
(s. vcl/inc/messagedialog.hxx).

With this in place, Accerciser now shows
the actual messages of the message dialog
when using the qt5/kf5 VCL plugins instead of
just empty strings, just as is the case for the native
gtk3 variant or similar dialogs in other
applications.
With this on top of a WIP branch that makes
Orca (more or less) speak for the qt5/kf5 VCL
plugin, the whole text of the message dialog is now
spoken as well. (Previously, only the title
of the dialog was announced).

More is needed for the case of using the NVDA screen reader on
Windows (which is the original scope of tdf#135588).
That will be handled separately.

Change-Id: I182f3c96ce646a198b747ca8fb5c1cc1ff0d7f7e